<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/start_timeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_timeTxt"
        android:layout_alignParentRight="true"
        android:layout_marginRight="43dp"
        android:onClick="chooseStartTime"
        android:text="@string/set_time" />

    <Button
        android:id="@+id/start_dateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="39dp"
        android:layout_toLeftOf="@+id/start_timeBtn"
        android:onClick="chooseStartDate"
        android:text="@string/set_date" />
    
    <Button
        android:id="@+id/end_dateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loadBtn"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="29dp"
        android:onClick="chooseEndDate"
        android:text="@string/set_date" />

    <Button
        android:id="@+id/end_timeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/end_dateBtn"
        android:layout_alignBottom="@+id/end_dateBtn"
        android:layout_centerHorizontal="true"
        android:onClick="chooseEndTime"
        android:text="@string/set_time" />

    <TextView
        android:id="@+id/end_timeTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/end_dateBtn"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="36dp"
        android:text="@string/end_time" />

    <TextView
        android:id="@+id/start_timeTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/start_dateBtn"
        android:text="@string/start_time" />

    

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/end_timeTxt"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="15dp"
        android:text="@string/end_time"
        android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
        android:id="@+id/loadBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="49dp"
        android:onClick="loadData"
        android:text="@string/load" />
        
</RelativeLayout>