
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"    
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TableLayout
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:textColor="@color/black" >

        <!-- Virtual Sensor -->

        <View
            android:layout_height="2dip"
            android:background="#61a7db" />

        <TableRow
            android:id="@+id/tableRow_vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android1:id="@+id/textView_vs"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android:layout_span="2"
                android:gravity="center"
                android1:text="@string/vs"
                android1:textAppearance="?android:attr/textAppearanceMedium"
                android1:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_vsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android1:id="@+id/textView_vsName"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/vsName"
                android1:textAppearance="?android:attr/textAppearanceSmall"
                android1:textColor="@color/black" />

            <EditText
                android:id="@+id/editText_vsName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="text"
                android:textColor="@color/black" >

                <!-- <requestFocus /> -->
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_vsType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android1:id="@+id/textView_vsType"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/vsType"
                android1:textAppearance="?android:attr/textAppearanceSmall"
                android1:textColor="@color/black" />

            <Spinner
                android1:id="@+id/spinner_vsType"
                style="@layout/spinner_item"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:entries="@array/vs_type_value"
                android1:prompt="@string/selectVS"
                android1:textColor="@color/black" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#61a7db" />

        <!-- Stream Source -->

        <TableRow
            android:id="@+id/tableRow_ss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android1:id="@+id/textView_ss"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android:layout_span="2"
                android:gravity="center"
                android1:text="@string/ss"
                android1:textAppearance="?android:attr/textAppearanceMedium"
                android1:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_ssSamplingRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android1:id="@+id/textView_ssSamplingRate"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/samplingRate"
                android1:textAppearance="?android:attr/textAppearanceSmall"
                android1:textColor="@color/black" />

            <EditText
                android:id="@+id/editText_ssSamplingRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="number"
                android:textColor="@color/black"
                android1:text="@string/defaultsr" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_ssWindowSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android1:id="@+id/textView_ssWindowSize"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/wsize"
                android1:textAppearance="?android:attr/textAppearanceSmall"
                android1:textColor="@color/black" />

            <EditText
                android:id="@+id/editText_ssWindowSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="number"
                android:textColor="@color/black"
                android1:text="@string/defaultws" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_ssStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android1:id="@+id/textView_ssStep"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/step"
                android1:textAppearance="?android:attr/textAppearanceSmall"
                android1:textColor="@color/black" />

            <EditText
                android:id="@+id/editText_ssStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="number"
                android:textColor="@color/black"
                android1:text="@string/defaultstep" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_ssAggregate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android1:id="@+id/textView_ssAggregate"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/aggregator"
                android1:textAppearance="?android:attr/textAppearanceSmall"
                android1:textColor="@color/black" />

            <Spinner
                android1:id="@+id/spinner_ssAggregate"
                style="@layout/spinner_item"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:entries="@array/vs_type_value"
                android1:prompt="@string/selectVS"
                android1:textColor="@color/black" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#61a7db" />

        <!-- Wrapper -->

        <TableRow
            android:id="@+id/tableRow__w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android1:id="@+id/textView_w"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android:layout_span="2"
                android:gravity="center"
                android1:text="@string/wrapper"
                android1:textAppearance="?android:attr/textAppearanceMedium"
                android1:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_wType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android1:id="@+id/textView_wType"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/wrapper"
                android1:textAppearance="?android:attr/textAppearanceSmall"
                android1:textColor="@color/black" />

            <Spinner
                android1:id="@+id/spinner_wType"
                style="@layout/spinner_item"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:entries="@array/vs_type_value"
                android1:prompt="@string/selectVS"
                android1:textColor="@color/black" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#61a7db" />

        <TableRow
            android:id="@+id/tableRow_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TableLayout                
                
                android:id="@+id/table_notify_config"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_span="2"
                android:background="@color/background"
                android:gravity="center"
                android:textColor="@color/black" >
            </TableLayout>
        </TableRow>

        <!-- <View
            android:layout_height="2dip"
            android:background="#61a7db" />

        <TableRow
            android:id="@+id/tableRow_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <Button
                android:id="@+id/btnAddVS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:onClick="saveVS"
                android:text="@string/save_vs_config"
                android1:textColor="@color/black" />
        </TableRow> -->
    </TableLayout>

</ScrollView>